kubernetes/components/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-for-spotify
  namespace: analytics-for-spotify
  labels:
    app: analytics-for-spotify
spec:
  replicas: 2
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: analytics-for-spotify
  template:
    metadata:
      labels:
        app: analytics-for-spotify
      annotations:
        enable.version-checker.io/analytics-for-spotify: "false"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      hostname: analytics-for-spotify
      restartPolicy: Always
      # securityContext:
      # runAsUser: 10033
      # runAsGroup: 30000
      # fsGroup: 20000
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      enableServiceLinks: false
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: analytics-for-spotify
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: analytics-for-spotify
      containers:
        - securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            runAsNonRoot: true
            # runAsUser: 10033
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - all
          livenessProbe:
            httpGet:
              path: /analytics/health/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 45
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /analytics/health/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 45
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /analytics/health/
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 5
          image: registry.arthurvardevanyan.com/apps/analytics-for-spotify:<VERSION>
          imagePullPolicy: IfNotPresent
          name: analytics-for-spotify
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 350m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 512Mi
          volumeMounts:
            - name: tmp
              mountPath: "/tmp"
            - name: run
              mountPath: "/run"
      #       - name: certs
      #         mountPath: "/home/root/cert"
      #         readOnly: true
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: run
          emptyDir:
            sizeLimit: 1Gi
      #   - name: certs
      #     secret:
      #       secretName: analytics-for-spotify-cert
      #       items:
      #         - key: "tls.crt"
      #           path: "tls.crt"
      #         - key: "tls.key"
      #           path: "tls.key"
