kubernetes/components/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-for-spotify
  namespace: analytics-for-spotify
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8080
      targetPort: 8080
  selector:
    app: analytics-for-spotify
