kubernetes/components/deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: analytics-for-spotify
  namespace: analytics-for-spotify
  annotations:
    externaldns.k8s.io: pihole
  labels:
    app: analytics-for-spotify
    app.kubernetes.io/instance: analytics-for-spotify_analytics-for-spotify
spec:
  host: spotify.<path:secret/data/homelab/domain#url>
  to:
    kind: Service
    name: analytics-for-spotify
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
